# corebluetooth-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_smoke.rs  02_central_manager_state.rs  03_peripheral_manager_state.rs  04_peripheral_callbacks.rs  05_service_roundtrip.rs  06_characteristic_roundtrip.rs  07_descriptor_roundtrip.rs  08_att_constants.rs  09_l2cap_channel_types.rs  10_advertisement_builder.rs  11_uuid_roundtrip.rs  12_mutable_service_build.rs  13_mutable_characteristic_build.rs  14_async_central.rs
src/: advertisement.rs  async_api.rs  att.rs  central.rs  central_manager.rs  characteristic.rs  descriptor.rs  error.rs  l2cap_channel.rs  lib.rs  mutable_characteristic.rs  mutable_service.rs  peripheral.rs  peripheral_manager.rs  private.rs  service.rs  uuid.rs
src/ffi/: async_stream.rs  att.rs  central_manager.rs  characteristic.rs  core.rs  descriptor.rs  l2cap_channel.rs  mod.rs  mutable_characteristic.rs  mutable_descriptor.rs  mutable_service.rs  peripheral.rs  peripheral_manager.rs  service.rs  uuid.rs
swift-bridge/: Package.swift
swift-bridge/Sources/CoreBluetoothBridge/: ATT.swift  Advertisement.swift  AsyncStream.swift  CentralManager.swift  Characteristic.swift  Core.swift  Descriptor.swift  L2CAPChannel.swift  MutableCharacteristic.swift  MutableService.swift  Peripheral.swift  PeripheralManager.swift  Service.swift  UUID.swift
swift-bridge/Sources/CoreBluetoothBridge/include/: module.modulemap
tests/: advertisement_tests.rs  async_stream_tests.rs  att_tests.rs  central_manager_tests.rs  characteristic_tests.rs  descriptor_tests.rs  l2cap_channel_tests.rs  mutable_characteristic_tests.rs  mutable_service_tests.rs  peripheral_manager_tests.rs  peripheral_tests.rs  service_tests.rs  uuid_tests.rs
