[package]
name = "corebluetooth-rs"
version = "0.3.2"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/corebluetooth-rs"
repository = "https://github.com/doom-fish/corebluetooth-rs"
description = "Safe Rust bindings for Apple's CoreBluetooth framework — central/client and peripheral/server BLE APIs on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["corebluetooth", "ble", "bluetooth", "macos", "apple"]
categories = ["api-bindings", "os::macos-apis"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "examples/**/*",
    "tests/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
    "COVERAGE.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "corebluetooth"
crate-type = ["lib"]

[features]
default = []
async = ["dep:doom-fish-utils"]

[dependencies]
apple-cf = { version = ">=0.4, <0.9", default-features = false }
doom-fish-utils = { path = "../doom-fish-utils", version = ">=0.1, <0.3", optional = true }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pollster = "0.3"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "01_smoke"

[[example]]
name = "14_async_central"
required-features = ["async"]

[profile.release]
debug = "full"
strip = "none"
